tests/ui/typeck/issue-7813.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-7813.rs:2:13
   |
LL |     let v = &[];
   |             ^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
